clusters/cluster/apps/media/sonarr/deployment-sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: lscr.io/linuxserver/sonarr:latest
        ports:
        - containerPort: 8989
        volumeMounts:
        - name: media-volume
          mountPath: /mnt/media
        - name: downloads-volume
          mountPath: /mnt/downloads
        - name: config-volume
          mountPath: /config
          subPath: media/sonarr
      volumes:
      - name: media-volume
        persistentVolumeClaim:
          claimName: media-pvc
      - name: downloads-volume
        persistentVolumeClaim:
          claimName: downloads-pvc
      - name: config-volume
        persistentVolumeClaim:
          claimName: config-pvc
