clusters/cluster/apps/media/sonarr/service-sonarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: apps
spec:
  selector:
    app: sonarr
  ports:
    - protocol: TCP
      port: 8989
      targetPort: 8989
      name: http
