clusters/cluster/apps/media/sonarr/ingress-sonarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  namespace: apps
spec:
  rules:
    - host: sonarr.${cluster_domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
